CalendarFX integration